# qwen-mt-image

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/local-image-translation/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/url-image-translation/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/get-image-translation-result/: __init__.py  task.oo.yaml
tasks/submit-image-translation/: __init__.py  task.oo.yaml
