[project]
name = "qwen-mt-image"
version = "0.1.0"
description = ""
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "qwen_mt_image", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
